--- a/gate_rest_api/.env
+++ b/gate_rest_api/.env
@@ -1,9 +1,9 @@
-CONTAINER_NAME=gate_rest_api
-BRANCH=prod
-IP_ADDRESS_1=172.18.0.96
-PORT_1=3501
-IP_ADDRESS_2=172.18.0.97
-PORT_2=3502
+CONTAINER_NAME="gate_rest_api"
+BRANCH="prod"
+IP_ADDRESS_1="1.1.1.1"
+PORT_1="3501"
+IP_ADDRESS_2="2.2.2.2"
+PORT_2="3502"
 RABBITMQ_USER="guest"
 RABBITMQ_PASS="guest"
-RABBITMQ_HOST="192.168.0.110"
+RABBITMQ_HOST="1.1.1.1"
